--- a/public/index.html
+++ b/public/index.html
@@ -4,108 +4,267 @@
 <meta charset="utf-8">
 <title>three.js examples</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-<link rel="shortcut icon" href="../files/favicon.ico" />
-<style>
-
-* { 
-	box-sizing: border-box;
-}
-html, body {
-	margin: 0px;
-	padding: 0px;
-	min-height: 100%;
-	background: #fff;
-	color: #000;
-
-	/*font-size: 1.4rem;*/
-	text-rendering: optimizeLegibility;
-
-	font-family: monospace;
-}
-
-textarea { 
-	min-height: 1em; 
-	width:100%; max-width: 100%; 
-	font-family: monospace;
-}
-
-#connection {
-	margin: 5px;
-	text-transform: uppercase;
-	background-color: #ddd;
-}
-
-#data {
-	margin: 5px;
-	white-space: pre;
-	background-color: #eee;
-}
-
-</style>
+<link type="text/css" rel="stylesheet" href="main.css">
 </head>
 <body>
 <div id="connection">Connection status</div>
-<div id="data">data</div>
-<script>
+<div id="data"></div>
+  <script src="connect.js"></script>
+<script type="module">
   
-let port = window.location.port
-let socket
-let connection_div = document.getElementById("connection")
-const socketpath = `${window.location.protocol === 'https:' ? 'wss:' : 'ws:'}//${window.location.hostname}:${port}/`
+import * as THREE from './build/three.module.js';
+import Stats from './jsm/libs/stats.module.js';
+import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
+import { Octree } from './jsm/math/Octree.js';
+import { Capsule } from './jsm/math/Capsule.js';
 
-function connect() {
-	if (socket) return;
+const clock = new THREE.Clock();
 
-	socket = new WebSocket(socketpath);
-	connection_div.innerText = `connecting to ${socketpath}`
-	socket.binaryType = "arraybuffer";
+const scene = new THREE.Scene();
+scene.background = new THREE.Color( 0x88ccff );
 
-	reconnect = function() {
-		connection_div.innerText = ("will reconnect")
-		setTimeout(connect, 1000)
-	}
+const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+camera.rotation.order = 'YXZ';
 
-	socket.onerror = function(event, err) {
-		connection_div.innerText = `connection error ${event} ${socket.readyState}`
-		console.error("WebSocket error observed:", event, socket.readyState);
-		socket = null
-		reconnect();
-	}
+const ambientlight = new THREE.AmbientLight( 0x6688cc );
+scene.add( ambientlight );
 
-	socket.onopen = () => {
-		connection_div.innerText = `connected to ${socketpath}`
+const fillLight1 = new THREE.DirectionalLight( 0xff9999, 0.5 );
+fillLight1.position.set( - 1, 1, 2 );
+scene.add( fillLight1 );
 
-		socket.onclose = function(event) {
-			console.log("WebSocket is closed now.");
-			connection_div.innerText = "disconnected"
-			socket = null
-			reconnect();
-		}
+const fillLight2 = new THREE.DirectionalLight( 0x8888ff, 0.2 );
+fillLight2.position.set( 0, - 1, 0 );
+scene.add( fillLight2 );
 
-		//socket.send('Here\'s some text that the server is urgently awaiting!'); 
-		socket.onmessage = event => {
-      console.log(event.data)
-// 			//if(event.data instanceof ArrayBuffer) {
-// 			let msg = JSON.parse(event.data)
-// 			if (msg.cmd == "setcode") {
-// 				//console.log("setcode", msg.code)
+const directionalLight = new THREE.DirectionalLight( 0xffffaa, 1.2 );
+directionalLight.position.set( - 5, 25, - 1 );
+directionalLight.castShadow = true;
+directionalLight.shadow.camera.near = 0.01;
+directionalLight.shadow.camera.far = 500;
+directionalLight.shadow.camera.right = 30;
+directionalLight.shadow.camera.left = - 30;
+directionalLight.shadow.camera.top	= 30;
+directionalLight.shadow.camera.bottom = - 30;
+directionalLight.shadow.mapSize.width = 1024;
+directionalLight.shadow.mapSize.height = 1024;
+directionalLight.shadow.radius = 4;
+directionalLight.shadow.bias = - 0.00006;
+scene.add( directionalLight );
 
-// 				editor.setValue(msg.code)
-// 				editor_dirty = false;
-// 			} else if (msg.cmd == "setstate") {
-// 				data.innerText = JSON.stringify(msg.state, null, "  ")
-// 			} else {
-// 				console.log(`Received message ${msg}`);
-// 			}
-		}
+const renderer = new THREE.WebGLRenderer( { antialias: true } );
+renderer.setPixelRatio( window.devicePixelRatio );
+renderer.setSize( window.innerWidth, window.innerHeight );
+renderer.shadowMap.enabled = true;
+renderer.shadowMap.type = THREE.VSMShadowMap;
 
-		// request current code:
-		socket.send(`{"cmd":"getcode"}`)
-	}
+const container = document.getElementById( 'container' );
+
+container.appendChild( renderer.domElement );
+
+const stats = new Stats();
+stats.domElement.style.position = 'absolute';
+stats.domElement.style.top = '0px';
+
+container.appendChild( stats.domElement );
+
+const GRAVITY = 30;
+
+const NUM_SPHERES = 20;
+const SPHERE_RADIUS = 0.2;
+
+const sphereGeometry = new THREE.SphereGeometry( SPHERE_RADIUS, 32, 32 );
+const sphereMaterial = new THREE.MeshStandardMaterial( { color: 0x888855, roughness: 0.8, metalness: 0.5 } );
+
+const spheres = [];
+let sphereIdx = 0;
+
+for ( let i = 0; i < NUM_SPHERES; i ++ ) {
+  const sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
+  sphere.castShadow = true;
+  sphere.receiveShadow = true;
+  scene.add( sphere );
+  spheres.push( { mesh: sphere, collider: new THREE.Sphere( new THREE.Vector3( 0, - 100, 0 ), SPHERE_RADIUS ), velocity: new THREE.Vector3() } );
 }
-connect();
+
+const worldOctree = new Octree();
+const playerCollider = new Capsule( new THREE.Vector3( 0, 0.35, 0 ), new THREE.Vector3( 0, 1, 0 ), 0.35 );
+const playerVelocity = new THREE.Vector3();
+const playerDirection = new THREE.Vector3();
+
+let playerOnFloor = false;
+const keyStates = {};
+
+document.addEventListener( 'keydown', ( event ) => {
+  keyStates[ event.code ] = true;
+} );
+
+document.addEventListener( 'keyup', ( event ) => {
+  keyStates[ event.code ] = false;
+} );
+
+document.addEventListener( 'mousedown', () => {
+  document.body.requestPointerLock();
+} );
+
+document.body.addEventListener( 'mousemove', ( event ) => {
+  if ( document.pointerLockElement === document.body ) {
+    camera.rotation.y -= event.movementX / 500;
+    camera.rotation.x -= event.movementY / 500;
+  }
+} );
+
+window.addEventListener( 'resize', onWindowResize );
+
+function onWindowResize() {
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize( window.innerWidth, window.innerHeight );
+}
+
+document.addEventListener( 'click', () => {
+  const sphere = spheres[ sphereIdx ];
+  camera.getWorldDirection( playerDirection );
+  sphere.collider.center.copy( playerCollider.end );
+  sphere.velocity.copy( playerDirection ).multiplyScalar( 30 );
+  sphereIdx = ( sphereIdx + 1 ) % spheres.length;
+
+} );
+
+function playerCollitions() {
+  const result = worldOctree.capsuleIntersect( playerCollider );
+  playerOnFloor = false;
+  if ( result ) {
+    playerOnFloor = result.normal.y > 0;
+    if ( ! playerOnFloor ) {
+      playerVelocity.addScaledVector( result.normal, - result.normal.dot( playerVelocity ) );
+    }
+    playerCollider.translate( result.normal.multiplyScalar( result.depth ) );
+  }
+}
+
+function updatePlayer( deltaTime ) {
+  if ( playerOnFloor ) {
+    const damping = Math.exp( - 3 * deltaTime ) - 1;
+    playerVelocity.addScaledVector( playerVelocity, damping );
+  } else {
+    playerVelocity.y -= GRAVITY * deltaTime;
+  }
+
+  const deltaPosition = playerVelocity.clone().multiplyScalar( deltaTime );
+  playerCollider.translate( deltaPosition );
+  playerCollitions();
+  camera.position.copy( playerCollider.end );
+}
+
+function spheresCollisions() {
+  for ( let i = 0; i < spheres.length; i ++ ) {
+    const s1 = spheres[ i ];
+    for ( let j = i + 1; j < spheres.length; j ++ ) {
+      const s2 = spheres[ j ];
+      const d2 = s1.collider.center.distanceToSquared( s2.collider.center );
+      const r = s1.collider.radius + s2.collider.radius;
+      const r2 = r * r;
+      if ( d2 < r2 ) {
+        const normal = s1.collider.clone().center.sub( s2.collider.center ).normalize();
+        const v1 = normal.clone().multiplyScalar( normal.dot( s1.velocity ) );
+        const v2 = normal.clone().multiplyScalar( normal.dot( s2.velocity ) );
+        s1.velocity.add( v2 ).sub( v1 );
+        s2.velocity.add( v1 ).sub( v2 );
+        const d = ( r - Math.sqrt( d2 ) ) / 2;
+        s1.collider.center.addScaledVector( normal, d );
+        s2.collider.center.addScaledVector( normal, - d );
+      }
+    }
+  }
+}
+
+function updateSpheres( deltaTime ) {
+  spheres.forEach( sphere =>{
+    sphere.collider.center.addScaledVector( sphere.velocity, deltaTime );
+    const result = worldOctree.sphereIntersect( sphere.collider );
+    if ( result ) {
+      sphere.velocity.addScaledVector( result.normal, - result.normal.dot( sphere.velocity ) * 1.5 );
+      sphere.collider.center.add( result.normal.multiplyScalar( result.depth ) );
+    } else {
+      sphere.velocity.y -= GRAVITY * deltaTime;
+    }
+
+    const damping = Math.exp( - 1.5 * deltaTime ) - 1;
+    sphere.velocity.addScaledVector( sphere.velocity, damping );
+
+    spheresCollisions();
+
+    sphere.mesh.position.copy( sphere.collider.center );
+  } );
+}
+
+function getForwardVector() {
+  camera.getWorldDirection( playerDirection );
+  playerDirection.y = 0;
+  playerDirection.normalize();
+  return playerDirection;
+}
+
+function getSideVector() {
+  camera.getWorldDirection( playerDirection );
+  playerDirection.y = 0;
+  playerDirection.normalize();
+  playerDirection.cross( camera.up );
+  return playerDirection;
+}
+
+function controls( deltaTime ) {
+  const speed = 25;
+  if ( playerOnFloor ) {
+    if ( keyStates[ 'KeyW' ] ) {
+      playerVelocity.add( getForwardVector().multiplyScalar( speed * deltaTime ) );
+    }
+
+    if ( keyStates[ 'KeyS' ] ) {
+      playerVelocity.add( getForwardVector().multiplyScalar( - speed * deltaTime ) );
+    }
+
+    if ( keyStates[ 'KeyA' ] ) {
+      playerVelocity.add( getSideVector().multiplyScalar( - speed * deltaTime ) );
+    }
+
+    if ( keyStates[ 'KeyD' ] ) {
+      playerVelocity.add( getSideVector().multiplyScalar( speed * deltaTime ) );
+    }
+
+    if ( keyStates[ 'Space' ] ) {
+      playerVelocity.y = 15;
+    }
+  }
+}
+
+const loader = new GLTFLoader().setPath( './models/gltf/' );
+
+loader.load( 'collision-world.glb', ( gltf ) => {
+  scene.add( gltf.scene );
+  worldOctree.fromGraphNode( gltf.scene );
+  gltf.scene.traverse( child => {
+    if ( child.isMesh ) {
+      child.castShadow = true;
+      child.receiveShadow = true;
+      if ( child.material.map ) {
+        child.material.map.anisotropy = 8;
+      }
+    }
+  } );
+  animate();
+} );
+
+function animate() {
+  const deltaTime = Math.min( 0.1, clock.getDelta() );
+  controls( deltaTime );
+  updatePlayer( deltaTime );
+  updateSpheres( deltaTime );
+  renderer.render( scene, camera );
+  stats.update();
+  requestAnimationFrame( animate );
+}
 </script>
-
-
 </body>
 </html>
